# pycc

./: pyproject.toml
pycc/: ast.py  error.py  file.py  parser.py  scanner.py  token.py
tests/: test_scanner.py
