[tool.poetry]
name = "pycc"
version = "0.1.0"
description = ""
authors = ["aita <792803+aita@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
mypy = "^0.711.0"
black = "==19.3b0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
